--- a/process_weather.yml
+++ b/process_weather.yml
@@ -51,11 +51,10 @@ jobs:
 
       - name: Execute Weather Script
         env:
+          # Use the secret you created in GitHub Settings
+          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
           MAPBOX_ACCESS_TOKEN: ${{ secrets.MAPBOX_ACCESS_TOKEN }}
           MAPBOX_USERNAME: ${{ secrets.MAPBOX_USERNAME }}
-          # AWS/Boto3 creds if your upload_to_mapbox uses them
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           python cloud.py \
             --uuid "${{ github.event.inputs.uuid }}" \
@@ -63,5 +62,4 @@ jobs:
             --end "${{ github.event.inputs.end }}" \
             --region "${{ github.event.inputs.region }}" \
             --weather ${{ github.event.inputs.weather }} \
-            --weights "${{ github.event.inputs.weights }} 
-            # if you updated cloud.py to accept the JSON string.
+            --weights '${{ github.event.inputs.weights }}'
