--- a/.github/workflows/process_weather.yml
+++ b/.github/workflows/process_weather.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Install System Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y google-chrome-stable libnss3 libgconf-2-4 libxi6 libgbm1
+          sudo apt-get install -y google-chrome-stable libnss3 libxi6 libgbm1 libasound2t64 libatk-bridge2.0-0 libgtk-3-0
 
       - name: Install Python Dependencies
         run: |
